# bot_telegram_wikimedia_commons_uploader

./: .dockerignore  .gitignore  Aptfile  Cargo.toml  Dockerfile  Procfile  README.md  RustConfig  project.toml  sonar-project.properties
.github/workflows/: ci.yml
examples/: oauth_initiate.rs
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: build-lambda-docker.sh  build-lambda.sh  deploy.sh  run-toolforge-webhook.sh  server-logs.sh  server-status.sh  set-webhook.sh  show-logs.sh  toolforge-code-deploy.sh  toolforge-deploy.sh  toolforge-logs.sh  toolforge-upload-ytdlp-cookies.sh  toolforge-webhook-deploy.sh  update-code.sh
src/: app.rs  archive.rs  aws.rs  commons.rs  config.rs  convert.rs  crypto.rs  geo.rs  lib.rs  main.rs  metadata.rs  models.rs  oauth.rs  store.rs  telegram.rs
toolforge/: Aptfile  README.md  jobs.yaml  service.template
