[package]
name = "telegram-wikimedia-commons-uploader-bot"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Public Telegram bot that uploads images to Wikimedia Commons under each user's own account."
repository = "https://github.com/vitaly-zdanevich/bot_telegram_wikimedia_commons_uploader"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg"] }
imagepipe = "0.5"
kamadak-exif = "0.5"
lambda_http = "1.2"
libheif-rs = { version = "1", optional = true }
md-5 = "0.10"
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "cookies"] }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2"
webp = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

# HEIC/HEIF support depends on the system libheif C/C++ library, which does not
# zig-cross-compile cleanly. It is therefore opt-in: plain `cargo build`/tests need no
# libheif, while the Lambda build enables `--features heic` (see scripts/build-lambda.sh).
[features]
default = []
heic = ["dep:libheif-rs"]
# SQLite storage backend for the long-living server deployment (Toolforge / Cloud VPS).
sqlite = ["dep:rusqlite"]
# Upload images from inside zip archives (VM-only). Pulls in extra image decoders
# so archive thumbnails can be rendered for PNG/GIF/TIFF/WebP as well as JPEG/BMP.
archive = ["dep:zip", "image/png", "image/gif", "image/tiff", "image/webp"]
# Add RAR support to `archive`. Shells out to the system `unrar` CLI at runtime
# (no native build dep); the VM provisioning installs the `unrar` package.
rar = ["archive"]

[[bin]]
name = "telegram-wikimedia-commons-uploader-bot"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
