[package]
name = "telegram-wikimedia-commons-uploader-bot"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Public Telegram bot that uploads images to Wikimedia Commons under each user's own account."
repository = "https://github.com/vitaly-zdanevich/bot_telegram_wikimedia_commons_uploader"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
base64 = "0.22"
bytes = "1"
hex = "0.4"
hmac = "0.12"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
image = { version = "0.25", default-features = false, features = ["bmp", "jpeg"] }
imagepipe = "0.5"
kamadak-exif = "0.5"
lambda_http = "1.2"
libheif-rs = { version = "1", optional = true }
md-5 = "0.10"
once_cell = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "cookies", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
urlencoding = "2"
webp = "0.3"
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

# HEIC/HEIF support is part of the normal build. Use `--no-default-features`
# only for constrained cross-builds that cannot build/link libheif.
[features]
default = ["heic"]
heic = ["dep:libheif-rs"]
# SQLite storage backend for the long-living server deployment (Toolforge / Cloud VPS).
sqlite = ["dep:rusqlite"]
# Upload images from inside zip archives (VM-only). Pulls in extra image decoders
# so archive thumbnails can be rendered for PNG/GIF/TIFF/WebP as well as JPEG/BMP.
archive = ["dep:zip", "image/png", "image/gif", "image/tiff", "image/webp"]
# Add RAR support to `archive`. Shells out at runtime to a system extractor —
# `unar` (free, Debian main) preferred, `unrar` as fallback — so there is no native
# build dependency and it works on Toolforge (Aptfile: unar) and Cloud VPS alike.
rar = ["archive"]

[[bin]]
name = "telegram-wikimedia-commons-uploader-bot"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
